@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class Haiya {
        {static} + main()
    }
  }
  

  namespace  {
    class Main {
        {static} + main()
        {static} ~ rekursif()
    }
  }
  

  namespace  {
    class fibonacci {
        {static} + main()
        {static} ~ fibon()
    }
  }
  

  namespace  {
    class findNumberOnArray {
        {static} ~ bilangan : int
        {static} ~ kumpulanbilangan : Integer[]
        {static} + main()
        {static} ~ bil()
    }
  }
  

  namespace  {
    class hayayay {
        {static} + main()
    }
  }
  

  namespace  {
    class linkedList2 {
        + balikArah()
        + belah()
        + count()
        + gabungin()
        + insert()
        + jumlahkan()
        + printList()
    }
  }
  

  namespace  {
    class manipulasiNode {
        ~ nama : String
        ~ total : int
        ~ totalTinggi : int
        + cek()
        + cek2()
        + cek3()
        + manipulasiNode()
        + totalTinggi()
        + totalTinggi2()
        + totalTinggi3()
    }
  }
  

  namespace  {
    class men {
        {static} + main()
    }
  }
  

  namespace  {
    class merge {
        + merge()
        + printList()
    }
  }
  

  namespace  {
    class noda {
        - data : int
        + getData()
        + getNext()
        + noda()
        + setData()
        + setNext()
    }
  }
  

  namespace  {
    class nope {
        - beratBadan : int
        - nama : String
        - tinggiBadan : int
        + getBeratBadan()
        + getNama()
        + getNext()
        + getTinggiBadan()
        + nope()
        + nope()
        + setBeratBadan()
        + setNama()
        + setNext()
        + setTinggiBadan()
    }
  }
  

  namespace  {
    class nope2 {
        ~ data : int
        ~ nope2()
    }
  }
  

  namespace  {
    class que {
        - jumlah : int
        + deque()
        + enque()
        + getJumlah()
        + printing()
        + que()
        + setJumlah()
    }
  }
  

  namespace  {
    class st {
        - jumlah : int
        + balik()
        + getJumlah()
        + pop()
        + printing()
        + push()
        + st()
    }
  }
  

  linkedList2 o-- nope2 : head
  manipulasiNode o-- nope : current
  manipulasiNode o-- nope : head
  manipulasiNode o-- nope : node1
  manipulasiNode o-- nope : node2
  manipulasiNode o-- nope : node3
  manipulasiNode o-- nope : node4
  merge o-- linkedList2 : a
  merge o-- linkedList2 : b
  merge o-- nope2 : head1
  merge o-- nope2 : head2
  merge o-- nope2 : tail1
  merge o-- nope2 : tail2
  noda o-- noda : next
  nope o-- nope : next
  nope2 o-- nope2 : next
  que o-- noda : depan
  que o-- noda : tengah
  st o-- noda : kepala


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
